--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+.DS_Store
+.DS_Store
+app/.DS_Store
+resources/.DS_Store
+storage/.DS_Store
