--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ Homestead.json
 /.vagrant
 .phpunit.result.cache
 .DS_Store
-.DS_Store
+/.DS_Store
 app/.DS_Store
 resources/.DS_Store
 storage/.DS_Store
